# Mql5-Python-Integration

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  example.py  mkdocs.yaml  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: build.yaml  chore.yaml  ci.yaml  docs.yaml  feat.yaml  fix.yaml  perf.yaml  refactor.yaml  style.yaml  test.yaml
.github/workflows/: deploy-mkdocs.yml  deploy-pypi-packages.yaml  deploy-semantic-release.yaml  deploy.yaml  test-metatrader5-integration.yml  test-pre-commit.yaml  test-pytest-and-integration.yml  test-pytest.yaml
ExpertAdvisor/: example.py  example_sockets_connection.py
Include/: indicator_connector.py  rates.py  tick.py  trade.py
docs/: contributing.md  examples.md  extra.css  extra.js  index.md
docs/examples/: README.md  __init__.py  basic_moving_average_strategy.py  bollinger_bands_strategy.py  example.py  example_sockets_connection.py  fibonacci_retracement_eurusd.py  getting_started.py  indicator_connector_strategy.py  market_depth_analysis.py  rate_converter_example.py  rsi_strategy.py
docs/examples/fimathe/: __init__.py
docs/strategies/: bollinger_bands.md  fibonacci_retracement.md  market_depth_analysis.md  moving_average.md  rsi_strategy.md
examples_of_expert_advisor/: __init__.py  example.py  example_sockets_connection.py
examples_of_expert_advisor/Fimathe/: README.md  eurusd_fimathe.py  win_fimathe.py
examples_of_expert_advisor/fimathe/: README.md  __init__.py  eurusd_fimathe.py  win_fimathe.py
include/: book.py  email_handler.py  indicator_connector.py  tick.py  trade.py  utilities.py
mqpy/: __init__.py  __main__.py  book.py  indicator_connector.py  logger.py  rates.py  template.py  tick.py  trade.py  utilities.py
mqpy/src/: book.py  indicator_connector.py  logger.py  rates.py  template.py  tick.py  trade.py  utilities.py
scripts/: __init__.py  build_docs.sh  gen_ref_pages.py  setup_mt5.py
test/integration/: test_mt5_initialization.py
tests/: conftest.py  test_book.py  test_rates.py  test_template.py  test_tick.py  test_trade.py  test_utilities.py
tests/integration/: test_headless_initialize.py  test_mt5_connection.py  test_mt5_headless_init.py
